build(actions): add prerelease to nightly version

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
   "devDependencies": {
     "all-contributors-cli": "^6.7.0",
     "auto-changelog": "^1.15.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "semver": "^6.3.0"
   },
   "engines": {
     "node": ">=10.15.3",
